--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
 <strong>＜利用停止期間＞</strong><br />
 2019年3月13日(水) 10：00 ～ 2019年3月28日(木) 12：00<br />
 ※メンテナンスは延長になる可能性がございます。<br /><br />
-<strong>＜サイトリニューアルオープン＞</strong><br />
-2019年3月28日(木) 12：00予定
+<strong>＜サイトリニューアルオープン予定＞</strong><br />
+2019年3月28日(木) 12：00
 </h1>
   </div>
   <div class="space"></div>
@@ -184,7 +184,7 @@
     <h4 class="title">
       ENQUIRY お問い合わせ
     </h4>
-    <p>THEATRE PRODUCTS OFFICAIL ONLINE SHOP</p>
+    <p>THEATRE PRODUCTS OFFICIAL ONLINE SHOP</p>
     <p><span>MAIL：</span><a href="mailto:support@theatreproducts.co.jp">support@theatreproducts.co.jp</a></p>
     <p>10:00〜18:00（土日祭日・GW,お盆,年末年始等の長期休暇を除く）</p>
     <p>ご質問の内容やお問い合わせの混雑状況によっては、回答までに若干
