added THEATRE PRODUCTS OFFICIAL ONLINE SHOP to bottom of content

--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
 2019年3月13日(水) 10：00 ～ 2019年3月28日(木) 12：00<br />
 ※メンテナンスは延長になる可能性がございます。<br /><br />
 <strong>＜サイトリニューアルオープン予定＞</strong><br />
-2019年3月28日(木) 12：00
+2019年3月28日(木) 12：00<br /><br />
+<strong>THEATRE PRODUCTS OFFICIAL ONLINE SHOP</strong>
 </h1>
   </div>
   <div class="space"></div>
